<resources>
    <!-- Strings used by app for settings -->
    <string name="app_name">Ingsw</string>
    <string name="action_settings">Settings</string>
    <string name="preferences_file_key">user_settings</string>
    
    <!-- Strings used by fragments for UI -->
    <string name="bottomNavigationHomeTitle">Home</string>
    <string name="bottomNavigationProfile">Profile</string>
    <string name="bottomNavigationFavorites">Favorites</string>
    <string name="searchPromptRestaurantsToggle">Restaurant</string>
    <string name="searchPromptHotelsToggle">Hotel</string>
    <string name="searchPromptAttractionsToggle">Attraction</string>
    <string name="profileFragmentReviewsDelimiter">Your reviews</string>
    <string name="loginFragmentUsernameEditTextHint">username</string>
    <string name="loginFragmentPasswordEditTextHint">password</string>
    <string name="loginFragmentLoginButtonText">Login</string>
    <string name="profilePictureStringDescription">Profile image of user</string>

    <!-- Strings used for UI completion -->
    <string name="structureAddressTemplate">%1$s %2$s, %3$s</string>
</resources>